--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,11 +6,20 @@ authors = ["Bibek K C <bibekyess@gmail.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = ">=3.9,<3.12"
 llama-index-llms-llama-cpp = "^0.2.3"
 fastapi = "^0.115.4"
 uvicorn = "^0.32.0"
 python-multipart = "^0.0.17"
+pymupdf = "^1.24.13"
+pydantic = "^2.9.2"
+pillow = "^11.0.0"
+pymupdf4llm = "^0.0.17"
+langchain-text-splitters = "^0.3.2"
+llama-index = "^0.11.21"
+llama-index-vector-stores-qdrant = "^0.3.3"
+llama-index-embeddings-huggingface = "^0.3.1"
+pre-commit = "^4.0.1"
 
 
 [build-system]
