--- a/Dockerfile_parser_api
+++ b/Dockerfile_parser_api
@@ -2,7 +2,19 @@ FROM python:3.9-slim
 
 WORKDIR /app
 
-
+# Install packages
+RUN apt-get update && \
+    apt-get install -y bash \
+                       git \
+                       curl \
+                       ca-certificates && \
+    apt-get install -y --no-install-recommends \
+                       build-essential \
+                       pkg-config \
+                       python3-dev \
+                       pandoc && \
+    rm -rf /var/lib/apt/lists/*
+    
 RUN pip install gradio==4.44.1 requests==2.32.3
 
 # Install cpu version for lightweight Docker Image
