--- a/Dockerfile_parser_api
+++ b/Dockerfile_parser_api
@@ -14,11 +14,13 @@ RUN apt-get update && \
                        python3-dev \
                        pandoc && \
     rm -rf /var/lib/apt/lists/*
-    
+
 RUN pip install gradio==4.44.1 requests==2.32.3
 
 # Install cpu version for lightweight Docker Image
 RUN pip install torch==2.5.1 --index-url https://download.pytorch.org/whl/cpu
+
+ARG CACHEBUST=1
 RUN pip install git+https://github.com/bibekyess/FastRAG.git
 
 COPY fastrag/api.py /app/api.py
